--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-config": "^1.5.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
