--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "env-cmd expo start",
+    "android": "env-cmd expo start --android",
+    "ios": "env-cmd expo start --ios",
+    "web": "env-cmd expo start --web"
   },
   "dependencies": {
     "@types/react": "~18.0.24",
@@ -16,11 +16,13 @@
     "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-config": "^1.5.0",
+    "react-native-url-polyfill": "^1.3.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "env-cmd": "^10.1.0"
   },
   "private": true
 }
