--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "web": "env-cmd expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "add": "^2.0.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-url-polyfill": "^1.3.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
