--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-url-polyfill": "^1.3.0",
     "typescript": "^4.6.3",
     "yarn": "^1.22.19"
