--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "add": "^2.0.6",
@@ -19,6 +21,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
     "typescript": "^4.6.3",
     "yarn": "^1.22.19"
