--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "~1.4.2",
     "jest": "^26.6.3",
     "jest-expo": "^48.0.2",
+    "firebase": "^9.19.1",
     "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
