--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "ios": "env-cmd expo start --ios",
     "web": "env-cmd expo start --web",
     "lint": "eslint './src/**/*.{js,jsx,ts,tsx}'",
-    "format": "prettier --write \"./src/**/*.{js,jsx,json,ts,tsx}\""
+    "format": "prettier --write \"./src/**/*.{js,jsx,json,ts,tsx}\"",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@types/jest": "^29.5.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "add": "^2.0.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^48.0.2",
     "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -31,6 +35,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.0.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "env-cmd": "^10.1.0",
     "eslint": "^8.0.0",
@@ -38,6 +44,12 @@
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
